# libboolector

./: CMakeLists.txt  README.md
patches/boolector/: boolector.cmake  boolector.diff
patches/btor2tools/: btor2tools.cmake  btor2tools.diff
patches/cadical/: CMakeLists.txt  cadical.cmake  cadical.patch
